# DGAT-sustainability

./: .env.example  .gitignore  LICENSE  README.md  README.ssl.md  a.sh  configure_keycloak_redirects.sh  configure_keycloak_webhooks.sh  docker-compose.yml  keycloak-startup.sh  keycloak-webhook-config.sh  openapi.json  package-lock.json  package.json  test_immediate_invitation.sh  test_manual_flow.sh  update-docker-compose-ip.sh
backend/: .env  Cargo.toml  EMAIL_VERIFICATION_FLOW.md  USER_INVITATION_FIXES.md  test_user_invitation.sh
backend/backend/src/api/handlers/: mod.rs
backend/common/: Cargo.toml
backend/common/src/: lib.rs
backend/dgat-service/: Cargo.toml  Dockerfile
backend/dgat-service/src/: Cargo.toml  main.rs
backend/src/: lib.rs  main.rs
backend/src/api/: models.rs  routes.rs
backend/src/api/handlers/: admin.rs  assessments.rs  files.rs  health.rs  mod.rs  questions.rs  responses.rs  submissions.rs
backend/src/common/: cache.rs  config.rs  database_macros.rs  entitytrait.rs  migration_tracker.rs  migrations.rs  mod.rs  state.rs
backend/src/common/database/: enums.rs  init.rs  mod.rs
backend/src/common/database/entity/: README.md  assessment_categories.rs  assessment_questions.rs  assessments.rs  assessments_response.rs  assessments_response_file.rs  assessments_submission.rs  (+13 more)
backend/src/common/migrations/: m20250123_000014_create_categories_table.rs  m20250124_000016_create_category_catalog_table.rs  m20250124_000017_create_organization_categories_table.rs  m20250124_000018_migrate_categories_to_catalog.rs  m20250706_000001_create_questions_table.rs  m20250706_000002_create_questions_revisions_table.rs  m20250706_000003_create_assessments_table.rs  m20250706_000004_create_assessments_response_table.rs  m20250706_000005_create_file_table.rs  m20250706_000006_create_assessments_response_file_table.rs  m20250706_000007_create_assessments_submission_table.rs  m20250706_000008_create_submission_reports_table.rs  m20250706_000009_add_unique_version_constraint.rs  m20250706_000010_fix_assessments_submission_fk.rs  m20250706_000010_remove_assessment_submission_fk.rs  m20250706_000011_update_assessments_add_org_id.rs  m20250715_000011_add_status_to_assessments_submission.rs  m20250715_000012_add_reviewed_at_to_assessments_submission.rs  m20250715_000013_update_submission_reports_table.rs  m20250731_000001_add_assessment_name.rs  m20250819_000015_create_temp_submission_table.rs  m20250916_000016_add_categories_to_assessments.rs  m20250917_000017_create_assessment_categories_join_table.rs  m20251010_082000_refactor_questions_category_link.rs  m20251104_153200_add_org_name_to_submissions.rs  mod.rs
backend/src/common/models/: claims.rs  keycloak.rs  mod.rs  organization.rs
backend/src/common/services/: keycloak_service.rs  mod.rs
backend/src/keycloak/: admin.rs  mod.rs  models.rs  realm-export.json  setup.rs
backend/src/web/: routes.rs
backend/src/web/api/: error.rs  mod.rs  models.rs  routes.rs
backend/src/web/handlers/: jwt_validator.rs  midlw.rs  mod.rs  organization_handlers.rs  request_logging.rs
backend/sustainability-service/: Cargo.toml  Dockerfile
backend/sustainability-service/src/: main.rs
backend/sync-service/: Cargo.toml  Dockerfile
backend/sync-service/src/: main.rs
backend/tests/: api_tests.rs  e2e_tests.rs  integration_tests.rs  user_invitation_tests.rs
backend/user-service/: Cargo.toml  Dockerfile
backend/user-service/src/: main.rs
(+552 files in other folders)
