[package]
name = "sustainability-tool"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
dotenvy = "0.15.7"
envconfig = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0.12"
jsonwebtoken = "9.3.1"
axum = "0.8.4"
http = "1.3.1"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
tower = "0.5.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
