[package]
name = "sustainability-tool"
version = "0.0.1"
edition = "2021"
license = "MIT"


[dependencies]
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = "1.1"
dotenv = "0.15.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["rt", "full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4"] }
axum = "0.7"
jsonwebtoken = "9.0"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
envconfig = "0.10"
dotenvy = "0.15"
tower = "0.5.2"

[[bin]]
name = "sustainability-tool"
path = "src/main.rs"

[[bin]]
name = "db-migrator"
path = "src/bin/db_migrator.rs"

[dev-dependencies]
sea-orm = { version = "1.1", features = ["mock"] }
