[package]
name = "dgat-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
